Tested and fixed scheduler. Deploy ready.

--- a/app.properties
+++ b/app.properties
@@ -2,3 +2,7 @@ spring.config.path=co.charbox
 
 device.id = test-dev
 device.api.key = asdf123
+
+job.heartbeat.interval = * * * * * ?
+job.ping_results.interval = */15 * * * * ?
+job.sst.interval = 0 * * * * ?
