Updated jobs. Ready for deploy

--- a/app.properties
+++ b/app.properties
@@ -3,6 +3,15 @@ spring.config.path=co.charbox
 device.id = test-dev
 device.api.key = asdf123
 
-job.heartbeat.interval = * * * * * ?
-job.ping_results.interval = */15 * * * * ?
-job.sst.interval = 0 * * * * ?
+charbot.api.uri = http://api.charbot.co:8080
+charbot.sst.uri = http://sst.charbot.co
+sst.server.ip = 52.7.52.135
+sst.server.port = 31415
+
+ping.uri = google.com
+ping.packetSize = 24
+ping.count = 10
+
+job.heartbeat.interval = 0 * * * * ?
+job.ping_results.interval = 0 */5 * * * ?
+job.sst.interval = 0 */10 * * * ?
