--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>co.charbox</groupId>
   <artifactId>charbox-client</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.0-SNAPSHOT</version>
   <name>Server Speed Test Client</name>
   <build>
 		<plugins>
@@ -53,7 +53,7 @@
   	<dependency>
   		<groupId>co.charbox</groupId>
   		<artifactId>domain</artifactId>
-  		<version>0.1.0</version>
+  		<version>0.1.0-SNAPSHOT</version>
   	</dependency>
   </dependencies>
 </project>
