--- a/app.properties
+++ b/app.properties
@@ -1,8 +1,5 @@
 spring.config.path=co.charbox
 
-device.id = test-dev
-device.api.key = asdf123
-
 charbot.api.uri = http://api.charbot.co:8080
 charbot.sst.uri = http://sst.charbot.co
 sst.server.ip = 52.7.52.135
@@ -13,5 +10,6 @@ ping.packetSize = 24
 ping.count = 10
 
 job.heartbeat.interval = 0 * * * * ?
-job.ping_results.interval = 0 */5 * * * ?
-job.sst.interval = 0 */10 * * * ?
+job.ping_results.interval = 0 */20 * * * ?
+job.sst.interval = 0 0 */3 * * ?
+
