--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,23 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>co.charbox</groupId>
-  <artifactId>charbox-client</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
-  <name>Server Speed Test Client</name>
-  <build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>co.charbox</groupId>
+	<artifactId>charbox-client</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
+	<name>Server Speed Test Client</name>
+	<dependencies>
+		<dependency>
+			<groupId>com.tpofof</groupId>
+			<artifactId>tpofof-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>co.charbox</groupId>
+			<artifactId>domain</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -35,7 +48,7 @@
 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>co.charbox.sst.client.SSTClient</mainClass>
+									<mainClass>co.charbox.client.ClientMain</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -44,16 +57,4 @@
 			</plugin>
 		</plugins>
 	</build>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.tpofof</groupId>
-  		<artifactId>tpofof-core</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>co.charbox</groupId>
-  		<artifactId>domain</artifactId>
-  		<version>0.1.0-SNAPSHOT</version>
-  	</dependency>
-  </dependencies>
 </project>
