--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,16 @@
 		<dependency>
 			<groupId>com.tpofof</groupId>
 			<artifactId>tpofof-core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>co.charbox</groupId>
 			<artifactId>domain</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>co.charbox</groupId>
+			<artifactId>core</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
