Improved socket speed test performance.

--- a/app.properties
+++ b/app.properties
@@ -3,8 +3,8 @@ spring.config.path=co.charbox
 device.id = test-dev
 device.api.key = asdf123
 
-charbot.api.uri = http://api.charbot.co:8080
-charbot.sst.uri = http://sst.charbot.co
+#charbot.api.uri = http://api.charbot.co:8080
+#charbot.sst.uri = http://sst.charbot.co
 sst.server.ip = 52.7.52.135
 sst.server.port = 31415
 
