Checking upgrade schedule to once per hour/

--- a/app.properties
+++ b/app.properties
@@ -13,6 +13,7 @@ ping.packetSize = 24
 ping.count = 10
 
 job.heartbeat.interval = 0 * * * * ?
+job.upgrade.interval = 0 0 * * * ?
 job.ping_results.interval = 0 */20 * * * ?
 job.sst.interval = 0 0 */3 * * ?
 
