--- a/app.properties
+++ b/app.properties
@@ -5,7 +5,7 @@ device.api.key = asdf123
 
 #charbot.api.uri = http://api.charbot.co:8080
 #charbot.sst.uri = http://sst.charbot.co
-sst.server.ip = 52.7.52.135
+#sst.server.ip = 52.7.52.135
 sst.server.port = 31415
 
 ping.uri = google.com
