--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,29 @@
 	<artifactId>charbox-client</artifactId>
 	<version>0.1.1-SNAPSHOT</version>
 	<name>Server Speed Test Client</name>
+	<properties>
+		<charbox-core.version>0.1.0-SNAPSHOT</charbox-core.version>
+	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>com.tpofof</groupId>
-			<artifactId>tpofof-core</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>co.charbox</groupId>
-			<artifactId>domain</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>co.charbox</groupId>
 			<artifactId>core</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>${charbox-core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.10</version>
 		</dependency>
 	</dependencies>
 	<build>
