--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,12 +1,12 @@
-log4j.rootLogger=INFO, STDOUT
+log4j.rootLogger=INFO, STDOUT, file
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
 log4j.appender.STDOUT.layout.ConversionPattern=[%-5p] %d %c - %m%n
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=charbot-client.log
+log4j.appender.file.File=logs/charbot-client.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{dd-MM-yyyy HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.file.layout.ConversionPattern=[%-5p] %d %c - %m%n
 
 log4j.logger.com.tpofof=DEBUG
 log4j.logger.co.charbox=TRACE
