--- a/app.properties
+++ b/app.properties
@@ -1,7 +1,7 @@
 spring.config.path=co.charbox
 
-device.id = test-dev
-device.api.key = asdf123
+device.id = 1
+device.api.key = asdf1234
 
 #charbot.api.uri = http://api.charbot.co:8080
 #charbot.sst.uri = http://sst.charbot.co
