--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,4 @@
-log4j.rootLogger=INFO, STDOUT, file
-log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
-log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=[%-5p] %d %c - %m%n
+log4j.rootLogger=INFO, file
 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=logs/charbot-client.log
