--- a/app.properties
+++ b/app.properties
@@ -1,19 +1,24 @@
+################### Spring ##########################
 spring.config.path=co.charbox
 
-device.id = 1
-device.api.key = asdf1234
 
-#charbot.api.uri = http://api.charbot.co:8080
-#charbot.sst.uri = http://sst.charbot.co
-#sst.server.ip = 52.7.52.135
+################### Services ##########################
 sst.server.port = 31415
 
+
+################### PING ##########################
 ping.uri = google.com
 ping.packetSize = 24
 ping.count = 10
 
+
+################### SCHEDULES ##########################
 job.heartbeat.interval = 0 * * * * ?
 job.upgrade.interval = 0 0 * * * ?
 job.ping_results.interval = 0 */20 * * * ?
 job.sst.interval = 0 0 */3 * * ?
 
+
+################### DEVICE ##########################
+device.id = 1
+device.api.key = asdf1234
