'Removing port from charbot api url.'

--- a/app.properties
+++ b/app.properties
@@ -3,7 +3,7 @@ spring.config.path=co.charbox
 
 
 ################### Services ##########################
-charbot.api.uri = http://api.charbot.co:8080
+charbot.api.uri = http://api.charbot.co
 charbot.sst.uri = http://sst.charbot.co
 sst.server.ip = 52.7.52.135
 sst.server.port = 31415
