Fixing api.charbot.url config.

--- a/app.properties
+++ b/app.properties
@@ -3,8 +3,8 @@ spring.config.path=co.charbox
 
 
 ################### Services ##########################
-charbot.api.uri = http://api.charbot.co
-charbot.sst.uri = http://sst.charbot.co
+charbot.api.url = http://api.charbot.co
+charbot.sst.url = http://sst.charbot.co
 sst.server.ip = 52.7.52.135
 sst.server.port = 31415
 
